# crewai-template

./: .env.example  agents.py  config.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
