[tool.poetry]
name = "crewai_template"
version = "0.1.0"
description = ""
authors = ["Scott Beardsley <scott@beards.ly>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
crewai = "^0.1.32"
langchain = "^0.1.4"
langchain-community = "^0.0.16"
langchain-core = "^0.1.16"
duckduckgo-search = "^4.2"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
